--- a/src/assets/index.css
+++ b/src/assets/index.css
@@ -1,3 +1,8 @@
 @tailwind base;
+@layer base {
+    html {
+      @apply font-sans antialiased;
+    }
+  }
 @tailwind components;
 @tailwind utilities;
